--- a/googlemaps.html
+++ b/googlemaps.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Google Maps API Example</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbxFhk7ujGEOVsirxtumApUmvId1gSgWI"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY"></script>
 </head>
 <body>
   <div id="map" style="height: 600px; width: 100%;"></div>
