--- a/dashboad-map/index.html
+++ b/dashboad-map/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAF4ZZlJoo8yWSpyiqhVmUBLyH5t5EjhpU"></script>
   </head>
   <body>
     <div id="root"></div>
